# grep_helpers2

./: .gitattributes  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/: coding-conventions.md  writing-tests.md
.devcontainer/: devcontainer.json
docs/: ARCHITECTURE.md  product-requirements.md
scripts/: fetch_ripgrep.py  gen_requirements_lock.py  probe_candidates.py
src/grep_analyzer/: automaton.py  budget.py  chase.py  classify.py  cli.py  diagnostics.py  dispatch.py  embed_preprocess.py  encoding.py  fixedpoint.py  ingest.py  model.py  output_writer.py  pipeline.py  proc_preprocess.py  progress.py  provenance.py  resume.py  ripgrep.py  snippet.py  spill.py  stoplist.py  tsv.py  walk.py
tests/: conftest.py  test_smoke.py
tests/golden/: test_golden.py
tests/integration/: test_cli.py  test_enc_memo.py  test_encoding_wiring.py  test_inv1_items_per_mb.py  test_lockstep.py  test_perf_caching.py  test_pipeline_dialect.py  test_pipeline_fixedpoint.py  (+6 more)
wheelhouse/: tree_sitter-0.21.3-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  tree_sitter-0.21.3-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  tree_sitter_c-0.21.4-cp38-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  tree_sitter_c-0.21.4-cp38-abi3-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  tree_sitter_java-0.21.0-cp38-abi3-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  tree_sitter_java-0.21.0-cp38-abi3-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl
(+120 files in other folders)
